the draft of the site has been completet to half, some bugs in the first part have been fixed

--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@
     width: 1200px;
     height: 174px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
 .sloganheader {
@@ -46,8 +46,40 @@
     font-weight: 400;
 }
 
-.slogantext {
+.slogantext { 
     font-size: 24px;
     font-weight: 400;
     color: #AAAAAA;
 }
+
+.photo-rooms {
+    width: 1296px;
+    height: 962px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.brand-information-header {
+    font-size: 48px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.brand-information-text {
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 60px;
+}
+.brand-logo {
+    width: 720px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+
+
